--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "https://github.com/sj2902/isl/tree/main/sakshi",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material/image-list": "^13.0.0",
+    "@mui/icons-material": "^5.5.1",
+    "@react-css/grid": "^1.5.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,9 +15,11 @@
     "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-iframe": "^1.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-simple-flex-grid": "^1.3.21",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
