--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.9",
+    "media-query-react": "^1.0.4",
+    "radium": "^0.26.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
