--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "reactjs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/sj2902/isl/tree/main/sakshi",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.3",
     "@material/image-list": "^13.0.0",
     "@mui/icons-material": "^5.5.1",
     "@react-css/grid": "^1.5.1",
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-simple-flex-grid": "^1.3.21",
+    "react-webcam": "^7.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
