--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "radium": "^0.26.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
