--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "media-query-react": "^1.0.4",
     "radium": "^0.26.2",
     "react": "^17.0.2",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-alert": "^7.0.3"
   }
 }
