--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "express": "^4.17.3",
     "firebase": "^9.6.9",
     "media-query-react": "^1.0.4",
@@ -19,22 +20,15 @@
     "react": "^17.0.2",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
-<<<<<<< HEAD
     "react-hook-form": "^7.29.0",
-=======
->>>>>>> 1d5b2f44beeadb8464cfd81bfefbbca243c8c6c3
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-simple-flex-grid": "^1.3.21",
-<<<<<<< HEAD
     "react-webcam": "^7.0.1",
     "styled-components": "^5.3.3",
-=======
-    "styled-components": "^5.3.5",
->>>>>>> 1d5b2f44beeadb8464cfd81bfefbbca243c8c6c3
     "web-vitals": "^2.1.2"
   },
   "scripts": {
