--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.27.2",
     "express": "^4.17.3",
     "firebase": "^9.6.9",
+    "firebase-admin": "^10.3.0",
     "media-query-react": "^1.0.4",
+    "python-shell": "^3.0.1",
     "radium": "^0.26.2",
     "react": "^17.0.2",
     "react-alert-template-basic": "^1.0.2",
