--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "radium": "^0.26.2",
     "react": "^17.0.2",
     "react-alert-template-basic": "^1.0.2",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
